@@ -4,11 +4,11 @@ libdir=${exec_prefix}/lib
 includedir=${prefix}/include
 
 pkglibdir=${libdir}/libcaldav
-pkgincludedir=${includedir}/libcaldav-0.2.0
+pkgincludedir=${includedir}/libcaldav-0.3.0
 
 Name: libcaldav
 Description: libcaldav is a client library for CalDAV
-Version: 0.2.0
+Version: 0.3.0
 
 Cflags: -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include    
 Libs: -lglib-2.0   -lcurl -lgssapi_krb5  
